# internal/types/types.go
@@ -43,12 +43,12 @@ type TicketStore interface {
 	GenerateTicket(guestID int) error
 	GetTicketInfo(guestName string, confirmAttendance bool, email string) ([]ReturnGuestMetadata, error)
 	RegenerateTicket(guestID int) ([]byte, error)
+	ScanQR(code string) (*ReturnScanedData, error)
 
 	// GetTicketsCount() error NOTE: This gets the count for named, generals and total count
 	// GenerateAllTickets() error NOTE: Generate all named tickets instead of just one
 	// GenerateGeneralTicket(Ticket) error NOTE: This uploads general tickets to s3
 	// GetGeneralTicket(generalID) ([]GeneralTicket, error) NOTE: This gets the url of the general ticket
-	// ScanQr(Ticket) (ReturnScanedData, error) NOTE: This returns the scanned data
 	// GetGeneralTicketsInfo(guestID int) ([]GeneralTicket, error)
 	// GetNamedTicketsInfo(guestID int) ([]Ticket, error)
 }
@@ -198,9 +198,9 @@ type ReturnGuestMetadata struct {
 
 // Return payload after scan ticket
 type ReturnScanedData struct {
-	GuestName    string `json:"guestName"`
-	TableName    string `json:"tableName"`
-	TicketStatus string `json:"ticketStatus"`
+	GuestName    string  `json:"guestName"`
+	TableName    *string `json:"tableName,omitempty"`
+	TicketStatus string  `json:"ticketStatus"`
 }
 
 type ReturnPDFile struct {
